...
import isel.pdm.ui.buttons.FabMode
import isel.pdm.ui.theme.BattleshipTheme
import isel.pdm.ui.topbar.NavigationHandlers
import isel.pdm.ui.topbar.NavigationTopBar

const val CreatePlayerScreenTag = "CreatePlayerScreen"
const val UsernameInputTag = "UsernameInput"

@Composable
fun CreatePlayerScreen(
    player: PlayerInfo?,
    navigationRequest: NavigationHandlers = NavigationHandlers(),
    onSaveRequested: (PlayerInfo) -> Unit = { }
...
